# nexacore-os

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
brand/: README.md  STRATEGY.md  brand-book.html
crates/nexacore-agent/: Cargo.toml
crates/nexacore-agent/src/: agent.rs  budget.rs  context.rs  helper.rs  lib.rs  message.rs  mode.rs  orchestrator.rs  palette.rs  palette_app_source.rs  policy.rs  privacy.rs  runtime_link.rs  security.rs  sysadmin.rs  system_ai.rs  task.rs  workflow_undo.rs
crates/nexacore-agent/src/guidance/: audit.rs  autonomy.rs  escalation.rs  explanation.rs  impact.rs  mod.rs  triggers.rs  undo.rs
crates/nexacore-aicheck-image/: Cargo.toml
crates/nexacore-aicheck-image/src/: main.rs
crates/nexacore-apps-image/: Cargo.toml  build.rs
crates/nexacore-apps-image/src/: gfx.rs  main.rs  shellsync.rs  sysinfo.rs
crates/nexacore-apps-image/src/apps/: files.rs  helper.rs  mod.rs  monitor.rs  settings.rs  system_info.rs  terminal.rs
crates/nexacore-auth/: Cargo.toml
crates/nexacore-auth/src/: auth.rs  hash.rs  lib.rs  store.rs
crates/nexacore-bench/: Cargo.toml  baseline.json  thresholds.json
crates/nexacore-bench/src/: lib.rs  main.rs
crates/nexacore-blkcheck-image/: Cargo.toml
crates/nexacore-blkcheck-image/src/: main.rs
crates/nexacore-capability/: Cargo.toml
crates/nexacore-capability/src/: attenuation.rs  clock.rs  crl.rs  enforcement.rs  lib.rs  revocation.rs  sandbox.rs  scope.rs  tee.rs  token.rs  ttl.rs
crates/nexacore-capability/tests/: integration_full_flow.rs  wire_format_v0_2.rs
crates/nexacore-cmd-curl/: Cargo.toml
crates/nexacore-cmd-curl/src/: lib.rs
crates/nexacore-cmd-curl/tests/: real_ollama_reply.rs
crates/nexacore-cmd-ifconfig/: Cargo.toml
crates/nexacore-cmd-ifconfig/src/: lib.rs
crates/nexacore-cmd-netstat/: Cargo.toml
crates/nexacore-cmd-netstat/src/: lib.rs
crates/nexacore-cmd-nslookup/: Cargo.toml
crates/nexacore-cmd-nslookup/src/: lib.rs
crates/nexacore-cmd-ping/: Cargo.toml
crates/nexacore-cmd-ping/src/: lib.rs
crates/nexacore-cmd-route/: Cargo.toml
crates/nexacore-cmd-route/src/: lib.rs
crates/nexacore-cmd-traceroute/: Cargo.toml
crates/nexacore-cmd-traceroute/src/: lib.rs
crates/nexacore-cmd-wget/: Cargo.toml
crates/nexacore-cmd-wget/src/: lib.rs
crates/nexacore-config/: Cargo.toml
crates/nexacore-config/src/: declarative.rs  lib.rs  schema.rs  store.rs  tunable.rs  value.rs
crates/nexacore-container/: Cargo.toml
crates/nexacore-container/src/: attestation.rs  boot.rs  caps.rs  confidential.rs  console.rs  engine.rs  hypervisor.rs  image.rs  lib.rs  lifecycle.rs  memory.rs  profile.rs  wine.rs
crates/nexacore-container/src/appbridge/: agent.rs  audio.rs  bridge.rs  clip.rs  clipboard.rs  dnd.rs  image.rs  input.rs  mod.rs
crates/nexacore-container/src/cli/: mod.rs  ps.rs  run.rs  run_windows.rs
crates/nexacore-container/src/virtio/: fs.rs  gpu.rs  mod.rs  net.rs  queue.rs  rng.rs  vsock.rs
crates/nexacore-container/tests/: kvm_engine_lifecycle.rs  lifecycle_state_machine.rs
crates/nexacore-context/: Cargo.toml
crates/nexacore-context/src/: crypto.rs  lib.rs  lifecycle.rs  model.rs  opt_in.rs  query.rs  store.rs  tokenize.rs
crates/nexacore-coreutils/: Cargo.toml
crates/nexacore-coreutils/src/: awk.rs  cat.rs  cut.rs  date.rs  df.rs  diff.rs  dirops.rs  du.rs  env.rs  fileops.rs  find.rs  fs.rs  grep.rs  head.rs  identity.rs  jobs.rs  kill.rs  lib.rs  ls.rs  man.rs  mount.rs  nav.rs  pager.rs  path.rs  perm.rs  process.rs  ps.rs  sed.rs  sort.rs  stat.rs  tail.rs  top.rs  tr.rs  tree.rs  uname.rs  uniq.rs  uptime.rs  wc.rs  which.rs  xargs.rs
crates/nexacore-desktop-shell/: Cargo.toml
crates/nexacore-desktop-shell/src/: dock.rs  frame.rs  launcher.rs  lib.rs  menubar.rs  router.rs  stroke.rs  tokens.rs  wm.rs
crates/nexacore-display/: Cargo.toml
crates/nexacore-display-image/: Cargo.toml
crates/nexacore-display-image/src/: main.rs
crates/nexacore-display-probe/: Cargo.toml
crates/nexacore-display-probe/src/: main.rs
crates/nexacore-display/src/: animation.rs  atlas.rs  capture.rs  color.rs  compositor.rs  effects.rs  font.rs  font_stack.rs  geometry.rs  hint.rs  ime.rs  input.rs  kerning.rs  keymap.rs  lib.rs  output.rs  present.rs  raster.rs  render_backend.rs  resize.rs  scale.rs  scene.rs  shaping.rs  surface.rs  tokens.rs  wallpaper.rs  window.rs  wm.rs  wm_polish.rs
crates/nexacore-display/tests/: brand_fonts.rs
crates/nexacore-doc/: Cargo.toml
crates/nexacore-doc/src/: lib.rs  model.rs  navigation.rs  print.rs  render.rs  selection.rs  text.rs  zoom.rs
crates/nexacore-driver-ahci/: Cargo.toml
crates/nexacore-driver-ahci/src/: fis.rs  identify.rs  lib.rs  regs.rs
crates/nexacore-driver-audio/: Cargo.toml
crates/nexacore-driver-audio/src/: abi.rs  bdl.rs  hda.rs  lib.rs  mixer.rs  routing.rs  virtio_snd.rs
crates/nexacore-driver-gpu/: Cargo.toml
crates/nexacore-driver-gpu/src/: context.rs  cursor.rs  display.rs  lib.rs  protocol.rs  submit.rs
crates/nexacore-driver-net-virtio-image/: Cargo.toml
crates/nexacore-driver-net-virtio-image/.cargo/: config.toml
crates/nexacore-driver-net-virtio-image/src/: main.rs
disk-image/: Cargo.toml  rust-toolchain.toml
docs/: 01-vision.md  02-architecture.md  03-mesh-protocol.md  04-security-model.md  04a-threat-model.md  05-governance.md  06-roadmap.md  07-hardware-requirements.md  08-funding-policy.md  09-tech-specifications.md  10-glossary.md  11-tooling-and-ci.md  12-brand.md  13-display-server-abi.md  14-qemu-proxmox-parity.md  15-syscall-abi.md  16-userland-posix-divergences.md  README.md  changelog.md  omnifs-compliance-matrix.md  project-spec.md  tech-specs.md
kernel-runner/: Cargo.toml  README.md
kernel-runner/.cargo/: config.toml
kernel-runner/src/: early_console.rs  main.rs
keys/: README.md  (+2 more)
ncips/: README.md  (+9 more)
(+809 files in other folders)
